--- a/docs/docs.org
+++ b/docs/docs.org
@@ -692,6 +692,12 @@ that data structure into a HTML string which was written on the file
 :ONE: one-default-doc
 :CUSTOM_ID: /docs/miscellaneous/
 :END:
+** Page at point
+
+If we need to render only the page at point, meaning the headline of
+level 1 with ~ONE~ and ~CUSTOM_ID~ org properties set, we can use the
+commands ~one-render-page-at-point~ and ~one-render-page-at-point-async~.
+
 ** onerc.el file
 
 We can use an Emacs Lisp file called ~onerc.el~ to customize our
@@ -706,9 +712,50 @@ or to define our own render functions.
 
 ** TODO one-add-to-global
 ** TODO one-hook
-** TODO Async commands
+** Async commands
 
-one-emacs-cmd-line-args-async
+The function ~one-render-pages-async~ and ~one-build-async~ spawn an
+~emacs~ subprocess in order to build html pages asynchronously.  The
+arguments passed to ~emacs~ depends on ~one-emacs-cmd-line-args-async~ value.
+
+By default, when ~one-emacs-cmd-line-args-async~ is ~nil~, we run ~emacs~
+in "batch mode", we load the user's initialization file and we
+evaluate a specific sexp that builds html pages.  Specifically, we
+pass the following ~command~ (~emacs~ file name followed by command line
+arguments) to ~make-process~ function like this:
+
+#+BEGIN_SRC emacs-lisp
+(let* ((emacs (file-truename
+               (expand-file-name invocation-name invocation-directory)))
+       (command `(,emacs "--batch"
+                         "-l" ,user-init-file
+                         "--eval" ,sexp))
+       (sexp ...))
+  (make-process
+   :name ...
+   :buffer ...
+   :command command))
+#+END_SRC
+
+If ~one-emacs-cmd-line-args-async~ is non-nil, we no longer load the user's
+initialization file and replace ~\"-l\" ,user-init-file~ in ~command~ above
+by the elements of ~one-emacs-cmd-line-args-async~.  For instance, if
+~one-emacs-cmd-line-args-async~ is equal to
+
+#+BEGIN_SRC emacs-lisp
+'("-l" "/path/to/some-elisp-file.el")
+#+END_SRC
+
+then ~command~ becomes
+
+#+BEGIN_SRC emacs-lisp
+(let* (...
+       (command `(,emacs "--batch"
+                         "-l" "/path/to/some-elisp-file.el"
+                         "--eval" ,sexp))
+       ...)
+  ...)
+#+END_SRC
 
 ** Extend one-ox org backend
 :PROPERTIES:
