--- a/README.org
+++ b/README.org
@@ -1,2 +1,4 @@
-~one~ provides few functions to build static websites leveraging Emacs
-Lisp and org-mode.
+~one.el~ a simple Static Site Generator for Emacs Lisp programmers and
+org-mode users.
+
+Check the docs: https://one.tonyaldon.com.
