mention how to build the doc in the README

--- a/README.org
+++ b/README.org
@@ -2,3 +2,7 @@
 org-mode users.
 
 Check the docs: https://one.tonyaldon.com.
+
+Note that the docs are built using ~one.el~ itself.  To build them,
+visit [[./docs/docs.org]] and call ~one-build~ command.  This will build the
+docs under ~./docs/public/~ subdirectory.
