update docs - add links to `tonyaldon/minibuffer.tonyaldon.com` repository

--- a/docs/docs.org
+++ b/docs/docs.org
@@ -115,7 +115,7 @@ Following those requirements led me to ~one.el~, an opiniated static
 site generator for Emacs Lisp programmers and Org mode users that
 works well if you want to build websites like
 
-- [[https://minibuffer.tonyaldon.com][minibuffer]]: learn Emacs Lisp one sexp at a time,
+- [[https://minibuffer.tonyaldon.com][minibuffer]] ([[https://github.com/tonyaldon/minibuffer.tonyaldon.com][source]]): learn Emacs Lisp one sexp at a time,
 - [[https://posts.tonyaldon.com][Elisp posts]]: some articles about Emacs Lisp,
 - [[https://jack.tonyaldon.com][jack]]: HTML generator library for Emacs Lisp,
 - [[https://one.tonyaldon.com][one.el]]: documentation of one.el package,
@@ -817,6 +817,12 @@ Those functions take three arguments:
 
 As those functions take ~global~ argument they are called after
 that argument has been let binded using ~one-add-to-global~.
+
+*** Example
+
+This hook is used to build ~feed.xml~ file of [[https://minibuffer.tonyaldon.com][minibuffer.tonyaldon.com]]
+website.  You can check ~onerc.el~ file of
+[[https://github.com/tonyaldon/minibuffer.tonyaldon.com][tonyaldon/minibuffer.tonyaldon.com]] repository to see how it is done.
 
 ** Async commands
 
